--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
                           </div>
                           <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8 rounded-full" style="border:none; color: white;">
                           <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400"> 2022 <a href="#" class="hover:underline">Andy Lukito</a>. 
+                            <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400"> Created By 1121Developer#3978
                           </span>
                       </footer>
 </body>
