--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@ buttons.forEach(button => {
 });
 
 const andy = new Audio("./andy_lukito.mp3");
-const buttons = document.querySelectorAll("button");
+const button2 = document.querySelectorAll("button");
 
-buttons.forEach(button => {
+button2.forEach(button => {
   button.addEventListener("click", () => {
     andy.play();
   });
