--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
         </div>
         <div class="navbar-center">
-          <a class="btn btn-ghost normal-case text-xl" href="#">Andy Lukito</a>
+          <a class="btn btn-ghost normal-case text-xl" href="#" onclick="andy.play()">Andy Lukito</a>
         </div>
         <div class="navbar-end">
         </div>
