--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
       <center>
     <img width="120" height="130" src="https://yt3.ggpht.com/ytc/AKedOLQ8e0WKt0KBaINgS8pwmtrXcwoaVFNwPK-nuC-dww=s88-c-k-c0x00ffffff-no-rj" class="rounded-full max-w-full h-auto p-1" />
       
-    <h1 class="mb-4 text-4xl font-bold tracking-tight text-gray-900 lg:font-extrabold lg:text-10xl lg:leading-none dark:text-white lg:text-center xl:px-36 lg:mb-7" class="typewrite" data-period="2000" data-type='[ "Halo, Nama Saya Andy Lukito.", "Saya Suka Membuat Games.", "Saya Mendirikan Perusahaan Bernama Akhir Pekan Studio"]'>
-    <span class="wrap"></span></h1>
+    <h1 class="mb-4 text-4xl font-bold tracking-tight text-gray-900 lg:font-extrabold lg:text-10xl lg:leading-none dark:text-white lg:text-center xl:px-36 lg:mb-7">
+<center>
+<p class="typewrite" data-period="2000" data-type='[ "Halo, Nama Saya Andy Lukito.", "Saya Suka Membuat Games.", "Saya Mendirikan Perusahaan Bernama Akhir Pekan Studio"]'>
+    <span class="wrap"></span>
+</h1>
+</center>
    
   
     <hr class="rounded-full">
