--- a/index.html
+++ b/index.html
@@ -34,14 +34,10 @@
       <center>
     <img width="120" height="130" src="https://yt3.ggpht.com/ytc/AKedOLQ8e0WKt0KBaINgS8pwmtrXcwoaVFNwPK-nuC-dww=s88-c-k-c0x00ffffff-no-rj" class="rounded-full max-w-full h-auto p-1" />
       
-    <h1 class="mb-4 text-4xl font-bold tracking-tight text-gray-900 lg:font-extrabold lg:text-10xl lg:leading-none dark:text-white lg:text-center xl:px-36 lg:mb-7">
-<center>
-<p class="typewrite" data-period="2000" data-type='[ "Halo, Nama Saya Andy Lukito.", "Saya Suka Membuat Games.", "Saya Mendirikan Perusahaan Bernama Akhir Pekan Studio"]'>
-    <span class="wrap"></span>
-</h1>
-</center>
-   
-  
+    <h1 class="mb-4 text-4xl font-bold tracking-tight text-gray-900 lg:font-extrabold lg:text-10xl lg:leading-none dark:text-white lg:text-center xl:px-36 lg:mb-7">Andy Lukito</h1>
+   <p class="mb-10 text-lg font-normal text-gray-500 dark:text-gray-400 lg:text-center lg:text-xl xl:px-60">Hai! Perkenalkan, Nama Saya <b class="text-blue-600">Andy Lukito</b></p>
+    <p class="mb-10 text-lg font-normal text-gray-500 dark:text-gray-400 lg:text-center lg:text-xl xl:px-60">Saya Adalah Game Developer Asal <b>Indonesia, Jakarta</b></p>
+    <p class="mb-10 text-lg font-normal text-gray-500 dark:text-gray-400 lg:text-center lg:text-xl xl:px-60">Saya Adalah Pendiri Perusahaan Game Yang Bernama <b class="text-red-200">Akhir Pekan Studio</b>
     <hr class="rounded-full">
     <h1 class="mb-4 text-4xl font-bold tracking-tight text-gray-900 lg:font-extrabold lg:text-10xl lg:leading-none dark:text-white lg:text-center xl:px-36 lg:mb-7">Game Buatan Akhir Pekan Studio</h1>
    <center>
