--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <div class="navbar-end">
         </div>
       </div>
-      <center>
+      <div class="flex h-screen">
+  <div class="m-auto">
     <img width="120" height="130" src="https://yt3.ggpht.com/ytc/AKedOLQ8e0WKt0KBaINgS8pwmtrXcwoaVFNwPK-nuC-dww=s88-c-k-c0x00ffffff-no-rj" class="rounded-full max-w-full h-auto p-1" />
       
     <h1 class="mb-4 text-4xl font-bold tracking-tight text-gray-900 lg:font-extrabold lg:text-10xl lg:leading-none dark:text-white lg:text-center xl:px-36 lg:mb-7">Andy Lukito</h1>
