--- a/index.html
+++ b/index.html
@@ -172,8 +172,9 @@ button2.forEach(button => {
 <style>
     hr {
       margin: 70px;
-      background-color: rgb(158, 155, 255);
       border: none;
+       clear: both;
+    visibility: hidden;
       height: 5px;
     }
   
