--- a/index.html
+++ b/index.html
@@ -166,7 +166,12 @@ button2.forEach(button => {
   });
 });
 
-   
+   function funfact() {
+       alert("fakta : andy kuliah di binus:v");
+       alert("link : https://graduation.apps.binus.ac.id/graduates/1901459270/");
+       console.log("https://graduation.apps.binus.ac.id/graduates/1901459270/ nih link nya");
+       alert("ini termasuk easter egg");
+   }
 </script>
 </body>
 <style>
