--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andy Lukito</title>
+<meta name="google-site-verification" content="aZhX2M2oCOtCg4ZznSGVhsDjz6P5DnA_3vnqtsBC5M4" />
     <script src="https://cdn.tailwindcss.com/"></script>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@2.19.0/dist/full.css" rel="stylesheet" type="text/css" />
 </head>
