--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andy Lukito</title>
 <meta name="google-site-verification" content="aZhX2M2oCOtCg4ZznSGVhsDjz6P5DnA_3vnqtsBC5M4" />
-<script src="https://cdn.tailwindcss.com/3.1.4"></script>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@2.19.0/dist/full.css" rel="stylesheet" type="text/css" />
+<script src="./tailwindcss.js"></script>
+    <link href="./daisyui.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
    
