--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 <script src="./tailwindcss.js"></script>
     <link href="./daisyui.css" rel="stylesheet" type="text/css" />
 </head>
+    <div class="bg-white">
     <body onload="myFunction()" style="margin:0;">
-
 <div id="loader"></div>
 <div id="loader2"><p class="mb-10 text-lg font-normal text-gray-500 dark:text-gray-400 lg:text-center lg:text-xl xl:px-60">Loading TailwindCSS Component...</p></div>
 <div style="display:none;" id="myDiv" class="animate-bottom">
+        </div>
     <style>
 /* Center the loader */
 #loader {
