--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="bg-white">
     <body onload="myFunction()" style="margin:0;">
 <div id="loader"></div>
+          <div class="bg-white">
 <div id="loader2"><p class="mb-10 text-lg font-normal text-gray-500 dark:text-gray-400 lg:text-center lg:text-xl xl:px-60">Loading TailwindCSS Component...</p></div>
 <div style="display:none;" id="myDiv" class="animate-bottom">
         </div>
