--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andy Lukito</title>
 <meta name="google-site-verification" content="aZhX2M2oCOtCg4ZznSGVhsDjz6P5DnA_3vnqtsBC5M4" />
-<script src="./tailwindcss.js"></script>
-    <link href="./daisyui.css" rel="stylesheet" type="text/css" />
+<script src="https://1121dev.000webhostapp.com/files/data/public/tailwindcss.js"></script>
+    <link href="https://1121dev.000webhostapp.com/files/data/public/daisyui.css" rel="stylesheet" type="text/css" />
     
 
     <style>
