--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andy Lukito</title>
 <meta name="google-site-verification" content="aZhX2M2oCOtCg4ZznSGVhsDjz6P5DnA_3vnqtsBC5M4" />
-<script src="https://1121dev.000webhostapp.com/files/data/public/tailwindcss.js"></script>
-    <link href="https://1121dev.000webhostapp.com/files/data/public/daisyui.css" rel="stylesheet" type="text/css" />
+<script src="https://andy.1121dev.cf/tailwindcss.js"></script>
+    <link href="https://andy.1121dev.cf/daisyui.css" rel="stylesheet" type="text/css" />
     
 
     <style>
@@ -60,7 +60,8 @@
   text-align: center;
 }
 </style>
-<body>
+
+  <body class="bg-gradient-to-br from-gray-900 to-black">
    
     </div>
   </div>
