--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html lang="en">
+<DOCTYPE HTML>
+<html lang="en" class="dark">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
