--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<doctype html>
 <html class="dark">
 <head>
     <meta charset="UTF-8">
@@ -31,7 +31,7 @@
           </div>
         </div>
         <div class="navbar-center">
-          <a class="btn btn-ghost normal-case text-xl" href="#" onclick="andy.play()">Andy Lukito</a>
+          <a class="btn btn-ghost normal-case text-xl font-roboto" href="#" onclick="andy.play()">Andy Lukito</a>
         </div>
         <div class="navbar-end">
 
