--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" /></svg>
             </label>
             <ul tabindex="0" class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52">
-              <li><a href="#">Homepage</a></li>
+              <li><a href="/AndyVSBocilRequest">Homepage</a></li>
               <li><a href="https://youtube.com/c/AndyLukito" class="hover:bg-red-600" onclick="andy.play()" target="_blank">YouTube</a></li>
               <li><a href="https://www.instagram.com/unknownlukito/" class="hover:bg-pink-500">Instagram</a></li>
               <li><a href="https://discord.com/invite/eC6k5mjkVt" class="hover:bg-blue-600" onclick="audio.play()" target="_blank">Discord</a></li>
