--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         </div>
       </div>
 <center>
-    <img width="120" height="130" src="https://yt3.ggpht.com/ytc/AKedOLQ8e0WKt0KBaINgS8pwmtrXcwoaVFNwPK-nuC-dww=s88-c-k-c0x00ffffff-no-rj" class="rounded-full max-w-full h-auto p-1" onclick="toggleDarkMode()"/>
+    <img width="120" height="130" src="https://yt3.ggpht.com/ytc/AKedOLQ8e0WKt0KBaINgS8pwmtrXcwoaVFNwPK-nuC-dww=s88-c-k-c0x00ffffff-no-rj" class="rounded-full max-w-full h-auto p-1"/>
       
     <h1 class="mb-4 text-4xl font-bold tracking-tight text-gray-900 lg:font-extrabold lg:text-10xl lg:leading-none dark:text-white lg:text-center xl:px-36 lg:mb-7">Andy Lukito</h1>
-   <p class="mb-10 text-lg font-normal text-gray-500 dark:text-gray-400 lg:text-center lg:text-xl xl:px-60">Hai! Perkenalkan, Nama Saya <b class="text-blue-600">Andy Lukito</b></p>
+   <p class="mb-10 text-lg font-normal text-gray-500 dark:text-gray-400 lg:text-center lg:text-xl xl:px-60">Hai! Perkenalkan, Nama Saya <a onclick="funfact()"><b class="text-blue-600">Andy Lukito</b></a></p>
     <p class="mb-10 text-lg font-normal text-gray-500 dark:text-gray-400 lg:text-center lg:text-xl xl:px-60">Saya Adalah Game Developer Asal <b>Indonesia, Jakarta</b></p>
     <p class="mb-10 text-lg font-normal text-gray-500 dark:text-gray-400 lg:text-center lg:text-xl xl:px-60">Saya Adalah Pendiri Perusahaan Game Yang Bernama <b class="text-red-200">Akhir Pekan Studio</b>
     <hr class="rounded-full">
