--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<p class="loading-text font-extrabold">Loading</p>
         <div class="loader"></div>
     </div>
-
+<div class="bg-blend-soft-light">
     <div class="content">
         <div class="navbar bg-base-100">
         <div class="navbar-start">
