--- a/index.html
+++ b/index.html
@@ -48,7 +48,14 @@
    <p class="mb-10 text-lg font-normal text-gray-500 dark:text-gray-400 lg:text-center lg:text-xl xl:px-60">Hai! Perkenalkan, Nama Saya <a onclick="funfact()"><b class="text-blue-600">Andy Lukito</b></a></p>
     <p class="mb-10 text-lg font-normal text-gray-500 dark:text-gray-400 lg:text-center lg:text-xl xl:px-60">Saya Adalah Game Developer Asal <b>Indonesia, Jakarta</b></p>
     <p class="mb-10 text-lg font-normal text-gray-500 dark:text-gray-400 lg:text-center lg:text-xl xl:px-60">Saya Adalah Pendiri Perusahaan Game Yang Bernama <b class="text-red-200">Akhir Pekan Studio</b>
-    <hr class="rounded-full">
+	    
+	    <hr>
+	<h1 class="mb-4 text-4xl font-bold tracking-tight text-gray-900 lg:font-extrabold lg:text-10xl lg:leading-none dark:text-white lg:text-center xl:px-36 lg:mb-7">Biodata</h1>
+	<p class="mb-10 text-lg font-normal text-gray-500 dark:text-gray-400 lg:text-center lg:text-xl xl:px-60">Biodata TIDAK 100% BENAR!</p>
+	<p class="mb-10 text-lg font-normal text-gray-500 dark:text-gray-400 lg:text-center lg:text-xl xl:px-60">Nama : Andy Lukito</p>
+	<p class="mb-10 text-lg font-normal text-gray-500 dark:text-gray-400 lg:text-center lg:text-xl xl:px-60">Tanggal Lahir, Bulan Dan Tahun : 01 Juni 1997</p>
+	<p class="mb-10 text-lg font-normal text-gray-500 dark:text-gray-400 lg:text-center lg:text-xl xl:px-60">Kuliah Di : <a href="https://graduation.apps.binus.ac.id/graduates/1901459270/">Binus University</a></p>  
+	<hr class="rounded-full">
     <h1 class="mb-4 text-4xl font-bold tracking-tight text-gray-900 lg:font-extrabold lg:text-10xl lg:leading-none dark:text-white lg:text-center xl:px-36 lg:mb-7">Game Buatan Akhir Pekan Studio</h1>
    <center>
 <div class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
@@ -123,6 +130,7 @@
 </div>
 <center>
                         <hr class="rounded-full">
+	
                         <h1 class="mb-4 text-4xl font-bold tracking-tight text-gray-900 lg:font-extrabold lg:text-10xl lg:leading-none dark:text-white lg:text-center xl:px-36 lg:mb-7">Social Media</h1>
                         <a href="https://youtube.com/c/AndyLukito" class="bg-red-500 hover:bg-red-600 text-white p-3" onclick="andy.play()" target="_blank">YouTube</a>
                         
