--- a/AndiVSBocilRequest/index.html
+++ b/AndiVSBocilRequest/index.html
@@ -35,7 +35,7 @@
   <script src="./background.js"></script>
   <script src="./game.js"></script>
   <script src="./index.js"></script>
-
+  <a href="https://andy.1121dev.cf/"><button>LET ME OUTTTTTT</button></a>
 </body>
 
 </html>
