--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <img width="120" height="130" src="https://yt3.ggpht.com/ytc/AKedOLQ8e0WKt0KBaINgS8pwmtrXcwoaVFNwPK-nuC-dww=s88-c-k-c0x00ffffff-no-rj" class="rounded-full max-w-full h-auto p-1"/>
       
     <h1 class="mb-4 text-4xl font-bold tracking-tight text-gray-900 lg:font-extrabold lg:text-10xl lg:leading-none dark:text-white lg:text-center xl:px-36 lg:mb-7">Andy Lukito</h1>
-   <p class="mb-10 text-lg font-normal text-gray-500 dark:text-gray-400 lg:text-center lg:text-xl xl:px-60">Hai! Perkenalkan, Nama Saya <a onclick="funfact()"><b class="text-blue-600">Andy Lukito</b></a></p>
+   <p class="mb-10 text-lg font-normal text-gray-500 dark:text-gray-400 lg:text-center lg:text-xl xl:px-60">Hai! Perkenalkan, Nama Saya <a onclick="fact()"><b class="text-blue-600">Andy Lukito</b></a></p>
     <p class="mb-10 text-lg font-normal text-gray-500 dark:text-gray-400 lg:text-center lg:text-xl xl:px-60">Saya Adalah Game Developer Asal <b>Indonesia, Jakarta</b></p>
     <p class="mb-10 text-lg font-normal text-gray-500 dark:text-gray-400 lg:text-center lg:text-xl xl:px-60">Saya Adalah Pendiri Perusahaan Game Yang Bernama <b class="text-red-200">Akhir Pekan Studio</b>
 	    
@@ -185,7 +185,7 @@ button2.forEach(button => {
   });
 });
 
-   function funfact() {
+   function fact() {
        alert("fakta : andy kuliah di binus:v");
        alert("link : https://graduation.apps.binus.ac.id/graduates/1901459270/");
        console.log("https://graduation.apps.binus.ac.id/graduates/1901459270/ nih link nya");
