--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Bakso Simulator</h5>
             <p class="mb-2 font-bold tracking-tight text-gray-900 dark:text-white"><b class="text-yellow-600 hover:text-underline">Lagi Naik Daun!</b></p>
         </a>
-        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Jadilah Pengusaha Bakso Terkenal Di Kota Bakso City</p>
+        <a href="https://www.andy.1121dev.cf/u_cannot_iskep.mp4"><p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Jadilah Pengusaha Bakso Terkenal Di Kota Bakso City</p></a>
         <a href="https://youtu.be/akGto7jutPI" class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
             Video YouTube
         </a>
