--- a/new/index.html
+++ b/new/index.html
@@ -202,7 +202,7 @@
             <div class="overflow-hidden rounded-md shadow-md">
 		    <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
-              <img src="https://img.itch.zone/aW1nLzc4MjY3MDgucG5n/315x250%23c/o%2FSONB.png" alt="TNABS" width="600px" height="600px"/>
+              <img src="https://img.itch.zone/aW1nLzc4MjY3MDgucG5n/315x250%23c/o%2FSONB.png" alt="TNABS" height="900px" width="900px" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">TNABS</h3>
             <p class="text-base font-medium text-secondary">Berperang seperti game TABS.</p>
