--- a/new/index.html
+++ b/new/index.html
@@ -198,9 +198,9 @@
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Lou The Slime</h3>
             <p class="text-base font-medium text-secondary">Pelihara Seekor Lou.</p>
-			<div class="mb-12 p-4 md:w-1/2">
-            <div class="overflow-hidden rounded-md shadow-md">
-		    <div class="mb-12 p-4 md:w-1/2">
+		</div>
+	      </div>
+		  <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
               <img src="https://img.itch.zone/aW1nLzc4MjY3MDgucG5n/315x250%23c/o%2FSONB.png" alt="TNABS" height="900px" width="900px" />
             </div>
