--- a/new/index.html
+++ b/new/index.html
@@ -201,7 +201,7 @@
 		</div>
 	      </div>
 	    </div>
-	    <p class="text-center">*NOTE! TNABS TIDAK DI MASUKKAN KARENA MASALAH RESPONSIVE PAGE</p>
+	    <p class="text-center dark:text-white text-dark">*NOTE! TNABS TIDAK DI MASUKKAN KARENA MASALAH RESPONSIVE PAGE</p>
 				</div>
 			    </div>
 		    </div>
