--- a/new/index.html
+++ b/new/index.html
@@ -48,7 +48,7 @@
                 </li>
                 <li class="mt-3 flex items-center pl-8 lg:mt-0">
                   <div class="flex">
-                    <span class="mr-2 text-sm text-slate-500">TOO SHINY</span>
+                    <span class="mr-2 text-sm text-slate-500">TOO BRIGHT</span>
                     <input type="checkbox" class="hidden" id="dark-toggle" />
                     <label for="dark-toggle">
                       <div class="flex h-5 w-9 cursor-pointer items-center rounded-full bg-slate-500 p-1">
