--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
               <img src="andi.png" alt="Andi" class="relative z-10 mx-auto max-w-full rounded-lg" height="500px" width="500px" />
               <span class="absolute bottom-0 left-1/2 -translate-x-1/2 md:scale-125">
                 <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                  
+                  <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+  <path fill="#0f0966" d="M45.8,-74.4C56.5,-64.4,60.3,-46.9,67.9,-30.8C75.6,-14.8,87,-0.3,88.9,15.4C90.7,31.2,83,48.2,71.3,61.7C59.5,75.2,43.7,85,27.6,86.4C11.4,87.7,-5,80.5,-22.1,75.4C-39.2,70.4,-56.8,67.5,-67.2,57.3C-77.5,47.1,-80.6,29.5,-82.9,12C-85.3,-5.5,-87,-23,-82,-38.9C-77,-54.7,-65.2,-68.9,-50.4,-77C-35.6,-85,-17.8,-87,-0.1,-86.8C17.6,-86.6,35.1,-84.3,45.8,-74.4Z" transform="translate(100 100) scale(1.1)" />
+</svg>
               </span>
             </div>
           </div>
