--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
 
            
           <p class="text-center text-xs font-medium text-slate-500">
-            Dibuat dengan <span class="text-pink-500">❤️</span> oleh 1121Dev, menggunakan
-            <a href="https://tailwindcss.com" target="_blank" class="font-bold text-sky-500">Tailwind CSS</a>. Template By <a href="https://github.com/sandhikagalih/portfolio-tailwind-css">WPU</a>
+            Dibuat dengan <span class="text-pink-500">❤️</span> oleh WPU Dan 1121Dev, menggunakan
+            <a href="https://tailwindcss.com" target="_blank" class="font-bold text-sky-500">Tailwind CSS</a>. Template By <a href="https://github.com/sandhikagalih/portfolio-tailwind-css">WPU</a> Dan Di 
           </p>
         </div>
       </div>
