--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       } else {
         document.documentElement.classList.remove('dark');
       }
+	    
+	    
+var utub = new Audio('andy.mp3');
+utub.play();
     </script>
   </head>
   <body>
@@ -110,6 +114,7 @@
               <a
                 href="https://youtube.com/c/AndyLukito"
                 target="_blank"
+		 onclick="utub.play()"
                 class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
                 <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -272,6 +277,7 @@
             <a
               href="https://youtube.com/c/AndyLukito"
               target="_blank"
+	       onclick="utub.play()"
               class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
             >
               <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
