--- a/index.html
+++ b/index.html
@@ -204,6 +204,14 @@ utub.play();
 		</div>
 	      </div>
 	    </div>
+	            <div class="mb-12 p-4 md:w-1/2">
+            <div class="overflow-hidden rounded-md shadow-md">
+              <img src="./J0Lo1b.png" alt="Lou The Slime" width="400px" height="400px"/>
+            </div>
+            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Lou The Slime</h3>
+            <p class="text-base font-medium text-secondary">Pelihara Seekor Lou.</p>
+		</div>
+	      </div>
 	    <p class="text-center dark:text-white text-dark">*NOTE! TNABS TIDAK DI MASUKKAN KARENA MASALAH RESPONSIVE PAGE</p>
 				</div>
 			    </div>
