--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@ utub.play();
             <div class="overflow-hidden rounded-md shadow-md">
               <img src="./J0Lo1b.png" alt="Lou The Slime" width="400px" height="400px"/>
             </div>
-            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Lou The Slime</h3>
-            <p class="text-base font-medium text-secondary">Pelihara Seekor Lou.</p>
+            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">TNABS</h3>
+            <p class="text-base font-medium text-secondary">Game Remake Dari TABS.</p>
 		</div>
 	      </div>
 	    <p class="text-center dark:text-white text-dark">*NOTE! TNABS TIDAK DI MASUKKAN KARENA MASALAH RESPONSIVE PAGE</p>
